--- a/mlkit/app/src/main/res/drawable/btn_custom.xml
+++ b/mlkit/app/src/main/res/drawable/btn_custom.xml
@@ -3,12 +3,12 @@
     android:padding="10dp"
     android:shape="rectangle" >
 
-    <solid android:color="#26a69a" />
+    <solid android:color="#24415E" />
 
     <corners
-        android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp"
-        android:topLeftRadius="5dp"
-        android:topRightRadius="5dp" />
+        android:bottomLeftRadius="30dp"
+        android:bottomRightRadius="30dp"
+        android:topLeftRadius="30dp"
+        android:topRightRadius="30dp" />
 
 </shape>
