--- a/mlkit/app/src/main/res/layout/fragment_login.xml
+++ b/mlkit/app/src/main/res/layout/fragment_login.xml
@@ -7,17 +7,6 @@
     tools:context="com.google.firebase.samples.apps.mlkit.LoginFragment">
 
     <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="50sp"
-        android:fontFamily="@font/indigo_daisy"
-        android:layout_marginStart="25dp"
-        android:layout_marginBottom="10dp"
-        android:layout_above="@id/tv_subtitle"/>
-
-    <TextView
         android:id="@+id/tv_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -97,5 +86,16 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="70dp"
         android:src="@drawable/foodology_removebg_preview__1_" />
+
+    <View
+        android:id="@+id/ellipse_3"
+        android:layout_width="3169dp"
+        android:layout_height="1767dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="-865dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="1153dp"
+        android:background="@drawable/login_elipse"
+        />
 
 </RelativeLayout>
