--- a/mlkit/app/src/main/res/layout/fragment_login.xml
+++ b/mlkit/app/src/main/res/layout/fragment_login.xml
@@ -77,24 +77,23 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="20dp"/>
 
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="490dp"
         android:layout_height="100dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="0dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="70dp"
         android:src="@drawable/foodology_removebg_preview__1_" />
 
-    <View
-        android:id="@+id/ellipse_3"
-        android:layout_width="3169dp"
-        android:layout_height="1767dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="-865dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="1153dp"
-        android:background="@drawable/login_elipse" />
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_height="396dp"
+        android:src="@drawable/elipse" />
+
 
 </RelativeLayout>
