--- a/mlkit/app/src/main/res/drawable/et_custom.xml
+++ b/mlkit/app/src/main/res/drawable/et_custom.xml
@@ -3,7 +3,7 @@
     android:padding="10dp"
     android:shape="rectangle" >
 
-    <solid android:color="#f5f5f5" />
+    <solid android:color="#CCE6EF" />
 
     <stroke
         android:width="1dp"
