--- a/mlkit/app/src/main/res/layout/fragment_login.xml
+++ b/mlkit/app/src/main/res/layout/fragment_login.xml
@@ -7,7 +7,7 @@
     tools:context="com.google.firebase.samples.apps.mlkit.LoginFragment">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/elipse"
         android:layout_width="match_parent"
         android:layout_height="396dp"
         android:layout_alignParentBottom="true"
@@ -18,30 +18,52 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="@string/e_mail"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
         android:padding="15dp"
         android:inputType="textEmailAddress"
         android:fontFamily="@font/roboto_regular"
         android:layout_below="@id/tv_subtitle"
         android:background="@drawable/et_custom"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="30dp"
         android:textSize="15sp" />
+
+    <View
+        android:id="@+id/line_email"
+        android:layout_width="918dp"
+        android:layout_height="1dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginRight="75dp"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/et_email"
+        android:layout_marginTop="-5dp"
+        android:background="@drawable/login_line" />
 
     <EditText
         android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="@string/password"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
         android:padding="15dp"
         android:fontFamily="@font/roboto_regular"
         android:inputType="textPassword"
         android:layout_below="@id/et_email"
         android:background="@drawable/et_custom"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="5dp"
         android:textSize="15sp" />
+
+    <View
+        android:id="@+id/line_password"
+        android:layout_width="918dp"
+        android:layout_height="1dp"
+        android:layout_marginLeft="75dp"
+        android:layout_marginRight="75dp"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/et_password"
+        android:layout_marginTop="-5dp"
+        android:background="@drawable/login_line" />
 
     <Button
         android:id="@+id/btn_login"
@@ -49,11 +71,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/et_password"
         android:background="@drawable/btn_custom"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginTop="60dp"
         android:fontFamily="@font/roboto_regular"
         android:textColor="@android:color/white"
+        android:textSize="15sp"
         android:text="@string/login"/>
 
     <ImageView
