--- a/mlkit/app/src/main/res/values/colors.xml
+++ b/mlkit/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="white">#FFFFFF</color>
     <color name="blue">#4286f4</color>
     <color name="red">#f44242</color>
+    <color name="dark_blue">#24415E</color>
+    <color name="light_blue">#CCE6EF</color>
+    <color name="light_orange">#E48E71</color>
+
 </resources>
