--- a/mlkit/app/src/main/res/layout/fragment_login.xml
+++ b/mlkit/app/src/main/res/layout/fragment_login.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="396dp"
         android:layout_alignParentBottom="true"
+
         android:src="@drawable/ic_elipse" />
 
     <EditText
@@ -18,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="@string/e_mail"
+        android:textColorHint="@color/dark_blue"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:padding="15dp"
@@ -26,6 +28,7 @@
         android:layout_below="@id/tv_subtitle"
         android:background="@drawable/et_custom"
         android:layout_marginTop="30dp"
+        android:textColor="@color/dark_blue"
         android:textSize="15sp" />
 
     <View
@@ -44,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:hint="@string/password"
+        android:textColorHint="@color/dark_blue"
         android:layout_marginLeft="60dp"
         android:layout_marginRight="60dp"
         android:padding="15dp"
@@ -52,6 +56,7 @@
         android:layout_below="@id/et_email"
         android:background="@drawable/et_custom"
         android:layout_marginTop="5dp"
+        android:textColor="@color/dark_blue"
         android:textSize="15sp" />
 
     <View
@@ -115,7 +120,24 @@
         android:layout_centerInParent="true"
         android:fontFamily="@font/roboto_regular"
         android:text="@string/welcome"
-        android:textSize="17sp" />
+        android:textSize="17sp"
+        android:textColor="@color/light_blue" />
+
+    <Button
+        android:id="@+id/login_resetPW"
+        android:layout_width="wrap_content"
+        android:layout_height="21dp"
+        android:layout_below="@id/line_password"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="75dp"
+        android:layout_marginBottom="20dp"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/roboto_regular"
+        android:textAllCaps="false"
+        android:text="Forgot Password?"
+        android:textColor="#8024415E"
+        android:textSize="12sp" />
 
 
 
