--- a/mlkit/app/src/main/res/layout/fragment_login.xml
+++ b/mlkit/app/src/main/res/layout/fragment_login.xml
@@ -104,13 +104,13 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/logo"
         android:layout_width="490dp"
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_marginStart="0dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="60dp"
         android:src="@drawable/foodology_removebg_preview__1_" />
 
     <TextView
