--- a/mlkit/app/src/main/res/layout/fragment_register.xml
+++ b/mlkit/app/src/main/res/layout/fragment_register.xml
@@ -47,7 +47,7 @@
         android:fontFamily="@font/roboto_regular"
         android:layout_below="@id/tv_subtitle"
         android:background="@drawable/et_custom"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="0dp"
         android:textColor="@color/dark_blue"
         android:textSize="15sp"/>
 
@@ -146,42 +146,37 @@
         android:layout_marginTop="-5dp"
         android:background="@drawable/login_line" />
 
-    <RelativeLayout
+
+    <Button
+        android:id="@+id/btn_register"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="70dp"
+        android:fontFamily="@font/roboto_regular"
+        android:textColor="@android:color/white"
+        android:textSize="15sp"
+        android:background="@drawable/btn_custom"
+        android:layout_below="@id/et_repassword"
+        android:layout_marginTop="20dp"
+        android:text="@string/register"/>
 
-        <Button
-            android:id="@+id/btn_register"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="30dp"
-            android:background="@drawable/btn_custom"
-            android:fontFamily="@font/roboto_regular"
-            android:text="@string/register"
-            android:textColor="@android:color/white" />
+    <ImageView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_above="@id/swipeLeft"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_arrow_left" />
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_above="@id/swipeLeft"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/ic_arrow_left" />
-
-        <TextView
-            android:id="@+id/swipeLeft"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
-            android:fontFamily="@font/roboto_regular"
-            android:text="@string/swipe_right_for_login"
-            android:textSize="15sp" />
-
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/swipeLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:fontFamily="@font/roboto_regular"
+        android:text="@string/swipe_right_for_login"
+        android:textSize="15sp" />
 
 </RelativeLayout>
