Scan Page Update

--- a/mlkit/app/src/main/res/layout/activity_still_image.xml
+++ b/mlkit/app/src/main/res/layout/activity_still_image.xml
@@ -46,7 +46,15 @@
         android:text="Take photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="25dp" />
+
+    <Button
+        android:id="@+id/snapButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="ic_scan_1"/>
 
   </FrameLayout>
 
