--- a/mlkit/app/src/main/res/layout/activity_still_image.xml
+++ b/mlkit/app/src/main/res/layout/activity_still_image.xml
@@ -9,6 +9,23 @@
     android:background="#000"
     android:keepScreenOn="true">
 
+  <ImageView
+      android:id="@+id/elipse"
+      android:layout_width="match_parent"
+      android:layout_height="78dp"
+      android:layout_alignParentTop="true"
+      android:scaleY="-1"
+      android:src="@drawable/ic_elipse_white" />
+
+  <ImageView
+      android:id="@+id/logo"
+      android:layout_width="490dp"
+      android:layout_height="50dp"
+      android:layout_alignParentStart="true"
+      android:layout_marginStart="0dp"
+      android:layout_alignParentTop="true"
+      android:layout_marginTop="15dp"
+      android:src="@drawable/foodology_removebg_preview__1_" />
 
   <ImageView
       android:id="@+id/previewPane"
