--- a/mlkit/app/src/main/res/layout/fragment_login.xml
+++ b/mlkit/app/src/main/res/layout/fragment_login.xml
@@ -85,16 +85,18 @@
 
     <Button
         android:id="@+id/swipeRight"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/btn_login"
         android:background="@drawable/btn_custom"
-        android:text="Go To Register"
-        android:textSize="10sp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginTop="20dp"
+        android:text="Register"
+        android:textSize="15sp"
         android:textColor="@android:color/white"
         android:fontFamily="@font/roboto_regular"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"/>
+/>
 
 
     <ImageView
