--- a/mlkit/app/src/main/res/layout/fragment_register.xml
+++ b/mlkit/app/src/main/res/layout/fragment_register.xml
@@ -166,21 +166,21 @@
         android:id="@+id/swipeLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_custom"
+        android:background="@android:color/transparent"
         android:text="Back To Login"
         android:textSize="10sp"
-        android:textColor="@android:color/white"
+        android:textColor="@color/dark_blue"
         android:fontFamily="@font/roboto_regular"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"/>
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="25dp"/>
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/swipeLeft"
+        android:layout_below="@id/btn_register"
         android:layout_marginLeft="70dp"
         android:layout_marginTop="5dp"
         android:layout_marginRight="70dp"
