--- a/mlkit/app/src/main/res/layout/fragment_login.xml
+++ b/mlkit/app/src/main/res/layout/fragment_login.xml
@@ -74,12 +74,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/et_password"
-        android:background="@drawable/btn_custom"
+        android:background="@drawable/btn_custom_login"
         android:layout_marginLeft="70dp"
         android:layout_marginRight="70dp"
         android:layout_marginTop="45dp"
         android:fontFamily="@font/roboto_regular"
-        android:textColor="@android:color/white"
+        android:textColor="@color/dark_blue"
         android:textSize="15sp"
         android:text="@string/login"/>
 
