--- a/mlkit/app/src/main/res/layout/activity_still_image.xml
+++ b/mlkit/app/src/main/res/layout/activity_still_image.xml
@@ -68,7 +68,7 @@
         android:text="Take photo" />
 
     <ImageButton
-        android:id="@+id/buttonSettlement"
+        android:id="@+id/buttonScan"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
@@ -77,15 +77,39 @@
         android:scaleType="center"
         android:src="@drawable/scan_1" />
 
+    <ImageButton
+        android:id="@+id/buttonImport"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="27dp"
+        android:layout_gravity="right"
+        android:layout_marginRight="50dp"
+        android:background="@android:color/transparent"
+        android:scaleType="center"
+        android:src="@drawable/ic_mdi_image" />
+
     <TextView
         android:id="@+id/scan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/buttonSettlement"
+        android:layout_below="@id/buttonScan"
         android:layout_gravity="center"
         android:layout_marginTop="25dp"
         android:fontFamily="@font/roboto_regular"
         android:text="Scan Now"
+        android:textColor="@color/white"
+        android:textSize="10sp" />
+
+    <TextView
+        android:id="@+id/importText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/buttonImport"
+        android:layout_gravity="right"
+        android:layout_marginTop="65dp"
+        android:layout_marginRight="60dp"
+        android:fontFamily="@font/roboto_regular"
+        android:text="Import"
         android:textColor="@color/white"
         android:textSize="10sp" />
 
