--- a/mlkit/app/src/main/res/layout/fragment_recipe.xml
+++ b/mlkit/app/src/main/res/layout/fragment_recipe.xml
@@ -9,23 +9,33 @@
     tools:context="com.google.firebase.samples.apps.mlkit.Register">
 
     <ImageView
-        android:id="@+id/logo"
-        android:layout_width="490dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/foodology_removebg_preview__1_" />
-
-    <ImageView
         android:id="@+id/elipse"
         android:layout_width="match_parent"
         android:layout_height="396dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="-100dp"
+        android:layout_marginTop="-160dp"
         android:scaleY="-1"
         android:src="@drawable/ic_elipse_orange" />
+
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="10dp"
+        android:rotation="15"
+        android:src="@drawable/foodology_removebg_preview__1_" />
+
+    <ImageView
+        android:id="@+id/charPNG"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="80dp"
+        android:layout_marginTop="30dp"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        app:srcCompat="@drawable/kindpng_1214636" />
 
     <TextView
         android:id="@+id/tv_subtitle"
@@ -170,12 +180,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
-        android:text="Back To Login"
+        android:text="21"
         android:textSize="10sp"
-        android:textColor="@color/dark_blue"
+        android:textColor="@color/white"
         android:fontFamily="@font/roboto_regular"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="50dp"
         android:layout_marginLeft="27dp"/>
 
 
@@ -183,20 +193,9 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:layout_marginLeft="13dp"
-        app:srcCompat="@drawable/ic_arrow_left" />
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="20dp"
+        app:srcCompat="@drawable/ic_arrow_left_white" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn_register"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="70dp"
-        android:background="@drawable/btn_custom"
-        android:visibility="invisible" />
 
 </RelativeLayout>
