--- a/mlkit/app/src/main/res/layout/fragment_recipe.xml
+++ b/mlkit/app/src/main/res/layout/fragment_recipe.xml
@@ -37,6 +37,28 @@
         android:layout_height="300dp"
         app:srcCompat="@drawable/kindpng_1214636" />
 
+    <View
+        android:id="@+id/panelShadow"
+        android:layout_width="270dp"
+        android:layout_height="45dp"
+        android:layout_alignBottom="@id/charPNG"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="118dp"
+        android:layout_marginRight="118dp"
+        android:layout_marginBottom="-3dp"
+        android:background="@drawable/recipe_panel_shadow" />
+
+    <View
+        android:id="@+id/panel"
+        android:layout_width="270dp"
+        android:layout_height="45dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="120dp"
+        android:layout_marginRight="120dp"
+        android:layout_marginTop="80dp"
+        android:layout_alignBottom="@id/charPNG"
+        android:background="@drawable/recipe_panel" />
+
     <TextView
         android:id="@+id/tv_subtitle"
         android:layout_width="wrap_content"
