--- a/mlkit/app/src/main/res/layout/home_page.xml
+++ b/mlkit/app/src/main/res/layout/home_page.xml
@@ -14,7 +14,7 @@
 
     <!--orange, blue top background-->
     <ImageView
-        android:id="@+id/ic_top"
+        android:id="@+id/background"
         android:layout_width="450dp"
         android:layout_height="250dp"
         android:layout_alignParentStart="true"
@@ -26,7 +26,7 @@
 
     <!--icon base shape 1-->
     <View
-        android:id="@+id/ic_icon_base"
+        android:id="@+id/square_1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_alignParentStart="true"
@@ -41,7 +41,7 @@
 
     <!--icon base shape 2-->
     <View
-        android:id="@+id/ic_icon_base"
+        android:id="@+id/square_2"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_alignParentStart="true"
@@ -56,7 +56,7 @@
 
     <!--icon base shape 3-->
     <View
-        android:id="@+id/ic_icon_base"
+        android:id="@+id/square_3"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_alignParentStart="true"
@@ -71,7 +71,7 @@
 
     <!--icon base shape 4-->
     <View
-        android:id="@+id/ic_icon_base"
+        android:id="@+id/square_4"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_alignParentStart="true"
@@ -86,7 +86,7 @@
 
     <!--recipe box 1-->
     <View
-        android:id="@+id/ic_recipe_box"
+        android:id="@+id/rectangle_1"
         android:layout_width="345dp"
         android:layout_height="464dp"
         android:layout_alignParentStart="true"
@@ -99,7 +99,7 @@
 
     <!--recipe box 2-->
     <View
-        android:id="@+id/ic_recipe_box"
+        android:id="@+id/rectangle_2"
         android:layout_width="345dp"
         android:layout_height="464dp"
         android:layout_alignParentStart="true"
@@ -112,7 +112,7 @@
 
     <!--recipe box 3-->
     <View
-        android:id="@+id/ic_recipe_box"
+        android:id="@+id/rectangle_3"
         android:layout_width="345dp"
         android:layout_height="464dp"
         android:layout_alignParentStart="true"
@@ -125,7 +125,7 @@
 
     <!--bottom dock base-->
     <ImageView
-        android:id="@+id/ic_dock_base"
+        android:id="@+id/bottom_base"
         android:layout_width="800dp"
         android:layout_height="250dp"
         android:layout_alignParentStart="true"
@@ -137,6 +137,7 @@
 
     <!--dock scan-->
     <Button
+        android:id="@+id/scan_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="190dp"
@@ -145,6 +146,7 @@
 
     <!--dock home-->
     <Button
+        android:id="@+id/home_button"
         android:layout_width="35dp"
         android:layout_height="35dp"
         android:layout_marginLeft="30dp"
@@ -153,6 +155,7 @@
 
     <!--dock profile-->
     <Button
+        android:id="@+id/profile_button"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginLeft="110dp"
@@ -161,6 +164,7 @@
 
     <!--dock forum-->
     <Button
+        android:id="@+id/forum_button"
         android:layout_width="28dp"
         android:layout_height="28dp"
         android:layout_marginLeft="280dp"
@@ -169,6 +173,7 @@
 
     <!--dock recipe-->
     <Button
+        android:id="@+id/recipe_button"
         android:layout_width="26dp"
         android:layout_height="26dp"
         android:layout_marginLeft="360dp"
