--- a/mlkit/app/src/main/res/layout/home_page.xml
+++ b/mlkit/app/src/main/res/layout/home_page.xml
@@ -52,7 +52,7 @@
         android:layout_marginEnd="190dp"
         android:layout_marginBottom="310dp"
         android:layout_marginTop="350dp"
-        android:background="@drawable/ic_icon_base" />
+        android:background="@drawable/ic_icon_base2" />
 
     <!--icon base shape 3-->
     <View
@@ -67,7 +67,7 @@
         android:layout_marginEnd="90dp"
         android:layout_marginBottom="310dp"
         android:layout_marginTop="350dp"
-        android:background="@drawable/ic_icon_base" />
+        android:background="@drawable/ic_icon_base3" />
 
     <!--icon base shape 4-->
     <View
@@ -82,7 +82,7 @@
         android:layout_marginEnd="-5dp"
         android:layout_marginBottom="310dp"
         android:layout_marginTop="350dp"
-        android:background="@drawable/ic_icon_base" />
+        android:background="@drawable/ic_icon_base4" />
 
     <!--recipe box 1-->
     <View
@@ -108,7 +108,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="470dp"
         android:layout_marginBottom="70dp"
-        android:background="@drawable/ic_recipe_box" />
+        android:background="@drawable/ic_recipe_box2" />
 
     <!--recipe box 3-->
     <View
@@ -121,7 +121,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="470dp"
         android:layout_marginBottom="70dp"
-        android:background="@drawable/ic_recipe_box" />
+        android:background="@drawable/ic_recipe_box3" />
 
     <!--bottom dock base-->
     <ImageView
