--- a/mlkit/app/src/main/res/layout/activity_main.xml
+++ b/mlkit/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ProfileSettingsActivity">
 
 
     <Button
@@ -201,6 +201,6 @@
         android:fontFamily="@font/roboto_regular"
         android:textColor="@android:color/white"
         android:textSize="15sp"
-        android:text="Enter App"/>
+        android:text="Back To App"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
