--- a/mlkit/app/src/main/res/layout/fragment_profile.xml
+++ b/mlkit/app/src/main/res/layout/fragment_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.firebase.samples.apps.mlkit.LoginFragment">
+    tools:context="com.google.firebase.samples.apps.mlkit.ProfileActivity">
 
     <View
         android:id="@+id/ellipseDarkBlue"
@@ -25,15 +25,15 @@
         android:layout_marginTop="10dp"
         android:src="@drawable/ic_arrow_left" />
 
-    <ImageView
-        android:id="@+id/settingsButton"
+    <Button
+        android:id="@+id/settings_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_marginTop="16dp"
         android:layout_marginRight="17dp"
-        android:src="@drawable/mdi_settings" />
+        android:background="@drawable/mdi_settings" />
 
     <View
         android:id="@+id/ellipseWhitePicFrame"
@@ -195,5 +195,62 @@
         android:textColor="@color/dark_blue"
         android:textSize="20sp"
         android:textStyle="bold" />
+
+    <!--bottom dock base-->
+    <ImageView
+        android:id="@+id/bottom_base"
+        android:layout_width="800dp"
+        android:layout_height="250dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="-15dp"
+        android:layout_marginEnd="-15dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="650dp"
+        android:src="@drawable/ic_dock_base"/>
+
+    <!--dock scan-->
+    <Button
+        android:id="@+id/scan_button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="190dp"
+        android:background="@drawable/ic_scan_icon"
+        android:layout_marginTop="685dp" />
+
+    <!--dock home-->
+    <Button
+        android:id="@+id/home_button"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginLeft="30dp"
+        android:background="@drawable/ic_dock_home"
+        android:layout_marginTop="685dp" />
+
+    <!--dock profile-->
+    <Button
+        android:id="@+id/profile_button"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginLeft="110dp"
+        android:background="@drawable/ic_dock_profile"
+        android:layout_marginTop="690dp" />
+
+    <!--dock forum-->
+    <Button
+        android:id="@+id/forum_button"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginLeft="280dp"
+        android:background="@drawable/ic_dock_forum"
+        android:layout_marginTop="690dp" />
+
+    <!--dock recipe-->
+    <Button
+        android:id="@+id/recipe_button"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginLeft="360dp"
+        android:background="@drawable/ic_dock_add_recipe"
+        android:layout_marginTop="692dp" />
 
 </RelativeLayout>
