--- a/mlkit/app/src/main/res/layout/fragment_recipe.xml
+++ b/mlkit/app/src/main/res/layout/fragment_recipe.xml
@@ -219,5 +219,60 @@
         android:layout_marginLeft="20dp"
         app:srcCompat="@drawable/ic_arrow_left_white" />
 
+    <!--bottom dock base-->
+    <ImageView
+        android:id="@+id/bottom_base"
+        android:layout_width="800dp"
+        android:layout_height="250dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="-15dp"
+        android:layout_marginEnd="-15dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="650dp"
+        android:src="@drawable/ic_dock_base"/>
 
+    <!--dock scan-->
+    <Button
+        android:id="@+id/scan_button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="190dp"
+        android:background="@drawable/ic_scan_icon"
+        android:layout_marginTop="685dp" />
+
+    <!--dock home-->
+    <Button
+        android:id="@+id/home_button"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginLeft="30dp"
+        android:background="@drawable/ic_dock_home"
+        android:layout_marginTop="685dp" />
+
+    <!--dock profile-->
+    <Button
+        android:id="@+id/profile_button"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginLeft="110dp"
+        android:background="@drawable/ic_dock_profile"
+        android:layout_marginTop="690dp" />
+
+    <!--dock forum-->
+    <Button
+        android:id="@+id/forum_button"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginLeft="280dp"
+        android:background="@drawable/ic_dock_forum"
+        android:layout_marginTop="690dp" />
+
+    <!--dock recipe-->
+    <Button
+        android:id="@+id/recipe_button"
+        android:layout_width="26dp"
+        android:layout_height="26dp"
+        android:layout_marginLeft="360dp"
+        android:background="@drawable/ic_dock_add_recipe"
+        android:layout_marginTop="692dp" />
 </RelativeLayout>
