--- a/mlkit/app/src/main/res/layout/activity_main.xml
+++ b/mlkit/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.13999999"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@drawable/profile_pic" />
 
     <TextView
         android:id="@+id/profileName"
