--- a/mlkit/app/src/main/res/layout/fragment_recipe.xml
+++ b/mlkit/app/src/main/res/layout/fragment_recipe.xml
@@ -363,4 +363,33 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"/>
 
+    <Button
+        android:id="@+id/btn_recipe"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_below="@id/et_password"
+        android:background="@drawable/btn_custom_recipe"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="210dp"
+        android:layout_marginTop="630dp"
+        android:fontFamily="@font/roboto_regular"
+        android:textColor="@color/light_orange"
+        android:textSize="15sp"
+        android:text="See Full Recipe"/>
+
+    <Button
+        android:id="@+id/btn_cook"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_below="@id/btn_login"
+        android:background="@drawable/btn_custom_login"
+        android:layout_marginLeft="210dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="630dp"
+        android:text="Start Cooking"
+        android:textSize="15sp"
+        android:textColor="@android:color/white"
+        android:fontFamily="@font/roboto_regular"
+        />
+
 </RelativeLayout>
