--- a/mlkit/app/src/main/res/layout/fragment_login.xml
+++ b/mlkit/app/src/main/res/layout/fragment_login.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="396dp"
         android:layout_alignParentBottom="true"
+        android:paddingTop="20dp"
         android:src="@drawable/ic_elipse" />
 
     <EditText
@@ -117,6 +118,7 @@
         android:fontFamily="@font/roboto_regular"
         android:text="@string/welcome"
         android:textSize="17sp"
+        android:paddingTop="30dp"
         android:textColor="@color/light_blue" />
 
     <Button
