--- a/mlkit/app/src/main/res/layout/activity_still_image.xml
+++ b/mlkit/app/src/main/res/layout/activity_still_image.xml
@@ -76,6 +76,7 @@
         android:layout_marginTop="-10dp"
         android:background="@android:color/transparent"
         android:scaleType="center"
+        android:onClick="ScanNow"
         android:src="@drawable/scan_1" />
 
     <ImageButton
